[gd_scene load_steps=4 format=3 uid="uid://buvah5pb7ww7p"]

[ext_resource type="Script" path="res://player/ControllableCamera.gd" id="1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_yo3l0"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(2, 1, 1)

[node name="ControllableCamera" type="Node3D"]
script = ExtResource("1")

[node name="GimbalH" type="Node3D" parent="."]

[node name="GimbalV" type="Node3D" parent="GimbalH"]

[node name="SpringArm3D" type="SpringArm3D" parent="GimbalH/GimbalV"]
collision_mask = 2
shape = SubResource("SphereShape3D_yo3l0")
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="GimbalH/GimbalV/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 4)
current = true

[node name="WaterDetector" type="Area3D" parent="GimbalH/GimbalV/SpringArm3D/Camera3D"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="GimbalH/GimbalV/SpringArm3D/Camera3D/WaterDetector"]
shape = SubResource("1")

[node name="UnderwaterEffect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0431373, 0.572549, 1, 0.423529)

[connection signal="area_entered" from="GimbalH/GimbalV/SpringArm3D/Camera3D/WaterDetector" to="." method="_on_WaterDetector_area_entered"]
[connection signal="area_exited" from="GimbalH/GimbalV/SpringArm3D/Camera3D/WaterDetector" to="." method="_on_WaterDetector_area_exited"]
